Doing 100% code coverage